--- a/Souce/PTXDPM/PTXDPM/Web.config
+++ b/Souce/PTXDPM/PTXDPM/Web.config
@@ -13,6 +13,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PTXDPM-20151129021559.mdf;Initial Catalog=aspnet-PTXDPM-20151129021559;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="ClothesConnectionString" connectionString="Data Source=(local);Initial Catalog=Clothes;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
